Fixed the animation! still ahve the issue with overlapping animations, but looking good so far

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -107,7 +107,7 @@ th {
 
 @keyframes moveUpFromBottom {
     from {
-        transform: translateY(-100%);
+        transform: translateY(100%);
     }
     to {
         transform: translateY(0%);
@@ -116,7 +116,7 @@ th {
 
 @keyframes moveDownFromTop {
     from {
-        transform: translateY(100%);
+        transform: translateY(-100%);
     }
     to {
         transform: translateY(0%);
@@ -124,7 +124,7 @@ th {
 }
 
 .position-changed {
-    animation-duration: 0.35s;
+    animation-duration: 0.25s;
     animation-timing-function: ease-in-out;
 }
 
@@ -134,4 +134,12 @@ th {
 
 .position-changed.move-down {
     animation-name: moveDown;
+}
+
+.position-changed.move-up-from-bottom {
+    animation-name: moveUpFromBottom;
+}
+
+.position-changed.move-down-from-top {
+    animation-name: moveDownFromTop;
 }
